﻿10.18 -> 10.19
XX/XX/2018

 • Hover constructors buildpower 140->110
 • Added option: GUI opacity
 • Removed iconset: modern_simplified
 • Removed firestate button from anti's
 • Fixed pyro pilotlight showing when out of los
 • Added modoption: "globallos", enables full visibility
 • DAI uses emp/tactical/nukes + remembers seen buildings and try to take these down.


10.17 -> 10.18
28/11/2018

 • Fixed com counter
 • Fixed too bright laserhit lights
 • Renamed modoption 'ffa' to 'ffa_mode'
 • Made mapmods work again (modoption: allowmapmutators, default enabled)
 • Player-TV widget enabled by default (shows on top of advplayerslist when spectator)


10.16 -> 10.17
21/11/2018

 • Fixed range exploit
 • Fighters will explode with less damage (half damage, 2/3 AoE)
 • Fixes and tweaks for Pausescreen, Autoquit, nanobeams and Player TV
 • Limited MSAA slider option max 8


10.15 -> 10.16
16/11/2018

 • 'nanoframes' will now be hit when build process reaches 5% (was 10%)
 • Fixed nano beam errors + different beam visual for reclaiming
 • Added widget "Player TV": auto camera tracks top trueskill players + switches every 40 secs
 • "Auto quit" widget will keep trying to quit if there is no mouse movement detected each minute
 • Pause screen will show when no new gameframes have been received (host admin pause)


10.14 -> 10.15
11/11/2018

 • DGun area of effect lines will be yellow when having insufficient energy
 • Fixed nano beam lights turning off immediately
 • Icon tweaks, additions and fixes


10.13 -> 10.14
10/11/2018

NOTE: Requires 104.0.1.853 or later engine versions

Balance:
 • Comblast lethal range to other commanders extended (+35%)
 • Vehicles acceleration and brakerate are now based on maxVel and turnrate
 • Stumpy/Raider/Bulldog/Reaper metal cost increased +5%
 • Storm/Rocko/Thud/Hammer : torso speed rotation increased
 • Removed high trajectory weapons from Hammer/Thud
 • Maverick +7% hp (from 1300 to 1400hp)
 • Penetrator reverse speed from 60% -> 40%